<resources>
    <string name="app_name">Criminal Intent</string>

    <!-- Strings for Crime Fragment -->
    <string name="crime">crime</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_detail_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>

    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_image_button">Mugshot</string>

    <string name="crime_report">%1$s! The crime was discovered on %2$s. %3$s, and %4$s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s</string>
    <string name="crime_report_subject">Criminal Intent Crime Report</string>
    <string name="send_report">Send crime report via</string>

    <!-- Strings for Date Picker -->
    <string name="date_picker_title">Date of crime:</string>

    <!-- Strings for Menus -->
    <string name="settings">settings</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$s crimes</string>

</resources>
