<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/scrollWrapper"
            android:background="@color/royal_blue">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/two_dp">

                <ImageView
                        android:layout_width="@dimen/eighty_dp"
                        android:layout_height="@dimen/eighty_dp"
                        android:id="@+id/crime_photo"
                        android:scaleType="centerInside"
                        android:layout_gravity="center"
                        android:background="@color/silver_grey"
                        android:cropToPadding="true"
                        android:layout_margin="@dimen/two_dp"/>

                <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/crime_camera"
                        android:text="@string/crime_image_button"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/two_dp"
                        android:background="@color/ripe_lemon_yellow"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="@dimen/two_dp"
                    android:layout_weight="3">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/crime_title_label"
                        style="?android:listSeparatorTextViewStyle"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/crime_title_edit_text"
                        android:layout_margin="@dimen/two_dp"
                        android:hint="@string/crime_title_hint"/>

            </LinearLayout>
        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crime_detail_text_view"
                android:text="@string/crime_detail_label"
                style="?android:listSeparatorTextViewStyle"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crime_date_button"
                android:background="@color/ripe_lemon_yellow"
                android:layout_margin="@dimen/five_dp"/>

        <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crime_solve_check_box"
                android:layout_margin="@dimen/five_dp"
                android:text="@string/crime_solved_label"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crime_suspect_button"
                android:background="@color/ripe_lemon_yellow"
                android:layout_margin="@dimen/five_dp"
                android:text="@string/crime_suspect_text"/>

        <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/crime_report_button"
                android:background="@color/ripe_lemon_yellow"
                android:layout_margin="@dimen/five_dp"
                android:text="@string/crime_report_text"/>

    </LinearLayout>


</ScrollView>